--- a/charts/forms-flow-bpm/values.yaml
+++ b/charts/forms-flow-bpm/values.yaml
@@ -1,4 +1,4 @@
-Domain: #<DEFINE_ME>
+Domain:  #<DEFINE_ME>
 camunda:
   analytics:
     database: forms-flow-analytics
@@ -38,7 +38,9 @@ image:
 formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
   secret: forms-flow-ai #name of formsflow.ai secret 
-
+sslcertificate:
+    secretName: formsflow-eks.aot-technologies.com-tls # Name for tls secretname
+    issuer: letsencrypt-prod   # Name for tls issuer name
 ingress: 
   enabled: true # create an ingress for this component
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{.Values.Domain}}"
