--- a/charts/forms-flow-web/values.yaml
+++ b/charts/forms-flow-web/values.yaml
@@ -6,6 +6,9 @@ analytics:
 formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
   secret: forms-flow-ai #name of formsflow.ai secret
+sslcertificate:
+    secretName: formsflow-eks.aot-technologies.com-tls # Name for tls secretname
+    issuer: letsencrypt-prod   # Name for tls issuer name
 ingress: 
   enabled: true # create an ingress for this component 
   port: 8080
