--- a/charts/forms-flow-web/values.yaml
+++ b/charts/forms-flow-web/values.yaml
@@ -8,6 +8,7 @@ formsflow:
   secret: forms-flow-ai #name of formsflow.ai secret
 ingress: 
   enabled: true # create an ingress for this component 
+  hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{.Values.Domain}}"
   port: 8080
 resources:
   limits:
