--- a/charts/forms-flow-api/values.yaml
+++ b/charts/forms-flow-api/values.yaml
@@ -15,7 +15,7 @@ formsflow:
   analytics: forms-flow-analytics #name of forms-flow-analytics component 
 ingress: 
   enabled: true # create an ingress for this component
-  hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{.Values.Domain}}"
+  hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   port: 5000
 image:
   registry: docker.io
