Hotfix for idm path

--- a/charts/forms-flow-idm/values.yaml
+++ b/charts/forms-flow-idm/values.yaml
@@ -84,8 +84,8 @@ keycloak:
     enabled: true
     extraTls:
       - {}
-    hostname:  #DEFINE_ME
-    pathtype: prefix
+    hostname: #DEFINE_ME
+    pathtype: Prefix
     servicePort: http
     tls: true
 
