--- a/charts/forms-flow-ai/templates/configmap.yaml
+++ b/charts/forms-flow-ai/templates/configmap.yaml
@@ -36,8 +36,8 @@ data:
   DATA_ANALYSIS_URL:  "https://forms-flow-data-analysis-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   NODE_ENV: "production"
   CUSTOM_SUBMISSION_URL: ""
-  CUSTOM_SUBMISSION_ENABLED: "false"
-  FORMSFLOW_DOC_API_URL: "https://forms-flow-documents-api-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
+  CUSTOM_SUBMISSION_ENABLED: "true"
+  FORMSFLOW_DOC_API_URL: "https://{{ .Values.Domain }}/document"
   DRAFT_ENABLED: "{{.Values.draft_enabled}}"
   DRAFT_POLLING_RATE: "15000"
   EXPORT_PDF_ENABLED: "{{.Values.export_pdf_enabled}}"
