--- a/charts/forms-flow-api/templates/deployment.yaml
+++ b/charts/forms-flow-api/templates/deployment.yaml
@@ -66,7 +66,7 @@ spec:
           valueFrom:
             configMapKeyRef:
               key: DATABASE_URL
-              name: "{{ .Release.Name }}"
+              name: "{{ .Chart.Name }}"
         - name: JWT_OIDC_ALGORITHMS
           valueFrom:
             configMapKeyRef:
