--- a/charts/forms-flow-ai/templates/configmap.yaml
+++ b/charts/forms-flow-ai/templates/configmap.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   DATABASE_NAME: {{ ternary (tpl .Values.postgresql.auth.database .) "<DEFINE_ME>" .Values.postgresql.enabled | quote }}
   DATABASE_PORT: {{ ternary .Values.postgresql.primary.service.ports.postgresql "<DEFINE_ME>" .Values.postgresql.enabled | quote }}
-  DATABASE_SERVICE_NAME: {{ ternary (tpl .Values.postgresql.fullnameoverride .) "<DEFINE_ME>" .Values.postgresql.enabled | quote }}
+  DATABASE_SERVICE_NAME: {{ ternary (tpl .Values.postgresql.fullnameOverride .) "<DEFINE_ME>" .Values.postgresql.enabled | quote }}
   BPM_API_URL: https://forms-flow-bpm-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}/camunda
   KEYCLOAK_JWT_OIDC_ALGORITHMS: "RS256"
   KEYCLOAK_JWT_OIDC_CACHING_ENABLED: "True"
