--- a/charts/forms-flow-ai/Chart.yaml
+++ b/charts/forms-flow-ai/Chart.yaml
@@ -7,7 +7,7 @@ dependencies:
     repository: https://charts.bitnami.com/bitnami/postgresql
     version: 11.6.15
   - name: mongodb
-    repository: https://charts.bitnami.com/bitnami
+    repository: https://charts.bitnami.com/bitnami/mongodb
     version: 11.1.10
-version: v2.1.3
+version: v2.1.4
 icon: "https://raw.githubusercontent.com/AOT-Technologies/forms-flow-ai/develop/.images/logo.png"
