--- a/charts/forms-flow-analytics/templates/ingress.yaml
+++ b/charts/forms-flow-analytics/templates/ingress.yaml
@@ -21,7 +21,7 @@ spec:
     - host: {{ .Values.Domain }}
       http:
         paths:
-          - path: /redash
+          - path: /
             pathType: Prefix
             backend:
               service:
