--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -8,8 +8,8 @@ database:
   url: "postgresql://{{.Values.database.username}}:{{.Values.database.password}}@{{.Values.database.servicename}}:{{.Values.database.port}}/{{.Chart.Name}}"
 
 sslcertificate:
-    secretName: formsflow-eks.aot-technologies.com-tls # Name for tls secretname
-    issuer: letsencrypt-prod   # Name for tls issuer name
+    secretName: formsflow-analytics-eks.aot-technologies.com-tls # Name for tls secretname
+    issuer: letsencrypt-staging   # Name for tls issuer name
 ingress: 
   enabled: true # create an ingress for this component
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{.Values.Domain}}"
