--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -4,6 +4,9 @@ Domain: #<DEFINE_ME>
 Analytics:
   Domain: #<DEFINE_ME>
 
+Idm:
+  Domain: #<DEFINE_ME>
+
 forms-flow-bpm:
   clientid: "forms-flow-bpm"
   clientsecret: "786001d6-68a8-4519-903c-bc5b5a870d68"
