Add missing client role to bpm service account in keycloak

--- a/charts/forms-flow-idm/templates/configmap.yaml
+++ b/charts/forms-flow-idm/templates/configmap.yaml
@@ -601,7 +601,7 @@ data:
         "requiredActions" : [ ],
         "realmRoles" : [ "uma_authorization", "offline_access" ],
         "clientRoles" : {
-          "realm-management" : [ "query-users", "query-groups", "view-users" ],
+          "realm-management" : [ "query-users", "query-groups", "view-users", "view-clients" ],
           "account" : [ "view-profile", "manage-account" ]
         },
         "notBefore" : 0,
