Add formsflow-analytics role to web client in keycloak

--- a/charts/forms-flow-idm/templates/configmap.yaml
+++ b/charts/forms-flow-idm/templates/configmap.yaml
@@ -282,6 +282,14 @@ data:
               "clientRole": true,
               
               "attributes": {}
+            },
+            {
+              "name": "formsflow-analytics",
+              "description": "",
+              "composite": false,
+              "clientRole": true,
+              
+              "attributes": {}
             }
           ],
           "security-admin-console": [],
