--- a/charts/forms-flow-ai/Chart.yaml
+++ b/charts/forms-flow-ai/Chart.yaml
@@ -2,13 +2,12 @@
 apiVersion: v2
 name: forms-flow-ai
 dependencies:
-  - name: postgresql
-    condition: postgresql.enabled 
-    repository: https://charts.bitnami.com/bitnami/postgresql
-    version: 11.6.15
+  - name: postgresql-ha 
+    repository: https://charts.bitnami.com/bitnami
+    version: 10.0.9
   - name: mongodb
     condition: mongodb.enabled 
-    repository: https://charts.bitnami.com/bitnami/mongodb
-    version: 11.1.10
+    repository: https://charts.bitnami.com/bitnami
+    version: 13.6.3
 version: v2.1.5
 icon: "https://raw.githubusercontent.com/AOT-Technologies/forms-flow-ai/develop/.images/logo.png"
