--- a/charts/forms-flow-web/values.yaml
+++ b/charts/forms-flow-web/values.yaml
@@ -6,16 +6,22 @@ analytics:
 formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
   secret: forms-flow-ai #name of formsflow.ai secret
-ingress: 
+ingress:
+  annotations:
+#    kubernetes.io/ingress.class: "nginx"
   enabled: true # create an ingress for this component 
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   port: 8080
+  tls: []
+#    - secretName: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}-tls"
+#      hosts:
+#        - "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
 resources:
   limits:
-    cpu: 600m
+    cpu: 400m
     memory: 1Gi
   requests:
-    cpu: 500m
+    cpu: 300m
     memory: 512Mi
 image:
   registry: docker.io
