updated ingress and resource value

--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -10,14 +10,14 @@ database:
 
 ingress: 
   annotations:
-#    kubernetes.io/ingress.class: nginx 
+    kubernetes.io/ingress.class: nginx 
   enabled: true # create an ingress for this component
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   port: 5000
-  tls: []
-#    - secretName: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}-tls"
-#      hosts:
-#        - "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
+  tls: 
+    - secretName: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}-tls"
+      hosts:
+        - "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
 
 redis-exporter:
   exporter:
