--- a/charts/forms-flow-analytics/templates/ingress.yaml
+++ b/charts/forms-flow-analytics/templates/ingress.yaml
@@ -4,9 +4,13 @@ metadata:
   labels:
     app: {{ .Chart.Name }}
   name: {{ .Chart.Name }}
+  annotations:
+{{ toYaml .Values.ingress.annotations | indent 4 }}
 spec:
+  {{- with .Values.ingress.tls }}
   tls:
-    - {}
+    {{- tpl (toYaml .) $ | nindent 4 }}
+  {{- end }}
   rules:
     -
       host: "{{ tpl .Values.ingress.hostname .}}"
