--- a/charts/forms-flow-documents-api/values.yaml
+++ b/charts/forms-flow-documents-api/values.yaml
@@ -13,14 +13,14 @@ formsflow:
   secret: forms-flow-ai #name of formsflow.ai secret
 ingress:
   annotations:
-    kubernetes.io/ingress.class: nginx
+#    kubernetes.io/ingress.class: nginx
   enabled: true # create an ingress for this component 
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   port: 5006
-  tls:  
-    - secretName: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}-tls"
-      hosts:
-        - "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
+  tls: []  
+#    - secretName: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}-tls"
+#      hosts:
+#        - "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
 image:
   registry: docker.io
   repository: formsflow/forms-flow-documents-api
