--- a/charts/forms-flow-admin/templates/ingress.yaml
+++ b/charts/forms-flow-admin/templates/ingress.yaml
@@ -4,15 +4,19 @@ metadata:
   labels:
     app: {{ .Chart.Name }}
   name: {{ .Chart.Name }}
+  annotations:
+{{ toYaml .Values.ingress.annotations | indent 4 }}
 spec:
+  {{- with .Values.ingress.tls }}
   tls:
-    - {}
+    {{- tpl (toYaml .) $ | nindent 4 }}
+  {{- end }}
   rules:
     -
-      host: "{{tpl .Values.ingress.hostname .}}"
+      host: "{{ tpl .Values.ingress.hostname .}}"
       http:
         paths:
-          - path: {{ .Values.ingress.path }}
+          - path: /
             pathType: Prefix
             backend:
               service:
