--- a/charts/forms-flow-idm/values.yaml
+++ b/charts/forms-flow-idm/values.yaml
@@ -67,7 +67,7 @@ keycloak:
   ingress:
     enabled: false
     annotations:
-#      kubernetes.io/ingress.class: nginx
+  #    kubernetes.io/ingress.class: nginx
     extraTls:
       - {}
     enabled: true
@@ -157,7 +157,7 @@ postgresql-ha:
     containerPorts:
       postgresql: 5432
     adminUsername: admin
-    adminPassword: ""
+    adminPassword: "admin"
     service:
       type: ClusterIP
       ports:
