--- a/charts/forms-flow-api/values.yaml
+++ b/charts/forms-flow-api/values.yaml
@@ -14,17 +14,20 @@ formsflow:
   secret: forms-flow-ai #name of formsflow.ai secret
   analytics: forms-flow-analytics #name of forms-flow-analytics component 
 ingress:
+  ingressClassName: ""
   annotations:
 #    kubernetes.io/ingress.class: nginx
   enabled: true # create an ingress for this component
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   port: 5000
-  tls:
-   - {}
+  tls: true
+  selfSigned: false
+  extraTls:
+    - {}
 #    - secretName: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}-tls"
 #      hosts:
 #        - "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
 image:
   registry: docker.io
-  repository: formsflow/forms-flow-webapi
-  tag: v5.1.0 #The image tag to pull from
+  repository: formsflow/forms-flow-webapi-ee
+  tag: v5.2.0-ee-alpha #The image tag to pull from
