--- a/charts/forms-flow-bpm/values.yaml
+++ b/charts/forms-flow-bpm/values.yaml
@@ -33,19 +33,22 @@ camunda:
 image:
   registry: docker.io
   repository: formsflow/forms-flow-bpm
-  tag: v5.1.0 #The image tag to pull from
+  tag: v5.2.0-ee-alpha #The image tag to pull from
 
 formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
   secret: forms-flow-ai #name of formsflow.ai secret 
 
 ingress:
+  ingressClassName: ""
   annotations:
 #    kubernetes.io/ingress.class: nginx
   enabled: true # create an ingress for this component
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   port: 8080
-  tls:
+  tls: true
+  selfSigned: false
+  extraTls:
    - {}
 #    - secretName: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}-tls"
 #      hosts:
