--- a/charts/forms-flow-documents-api/values.yaml
+++ b/charts/forms-flow-documents-api/values.yaml
@@ -12,12 +12,15 @@ formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
   secret: forms-flow-ai #name of formsflow.ai secret
 ingress:
+  ingressClassName: ""
   annotations:
 #    kubernetes.io/ingress.class: nginx
   enabled: true # create an ingress for this component 
   hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
   port: 5006
-  tls:
+  tls: true
+  selfSigned: false
+  extraTls:
    - {}  
 #    - secretName: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}-tls"
 #      hosts:
@@ -25,4 +28,4 @@ ingress:
 image:
   registry: docker.io
   repository: formsflow/forms-flow-documents-api
-  tag: v5.1.0 #The image tag to pull from
+  tag: v5.2.0-ee-alpha #The image tag to pull from
