--- a/charts/forms-flow-idm/values.yaml
+++ b/charts/forms-flow-idm/values.yaml
@@ -65,7 +65,7 @@ keycloak:
   service:
     type: ClusterIP
   ingress:
-    enabled: false
+    ingressClassName: ""
     annotations:
   #    kubernetes.io/ingress.class: nginx
     extraTls:
