--- a/charts/forms-flow-documents-api/values.yaml
+++ b/charts/forms-flow-documents-api/values.yaml
@@ -28,4 +28,4 @@ ingress:
 image:
   registry: docker.io
   repository: formsflow/forms-flow-documents-api
-  tag: v5.2.0-ee-alpha #The image tag to pull from
+  tag: v5.1.0 #The image tag to pull from
