--- a/charts/forms-flow-api/values.yaml
+++ b/charts/forms-flow-api/values.yaml
@@ -30,4 +30,4 @@ ingress:
 image:
   registry: docker.io
   repository: formsflow/forms-flow-webapi-ee
-  tag: v5.2.0-ee-alpha #The image tag to pull from
+  tag: v5.1.0 #The image tag to pull from
