--- a/charts/forms-flow-forms/values.yaml
+++ b/charts/forms-flow-forms/values.yaml
@@ -8,7 +8,7 @@ formsflow:
 image:
   registry: docker.io
   repository: formsflow/forms-flow-forms
-  tag: v5.2.0-ee-alpha #The image tag to pull from
+  tag: v5.1.0 #The image tag to pull from
 
 ingress:
   ingressClassName: ""
