--- a/charts/forms-flow-ssl/forms-flow-analytics/templates/cert.yaml
+++ b/charts/forms-flow-ssl/forms-flow-analytics/templates/cert.yaml
@@ -1,13 +1,12 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: {{ .Values.certificate.domainName }}
-  namespace: {{ .Values.certificate.namespace }}
+  name: {{ .Chart.Name }}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}
 spec:
-  secretName: {{ .Values.certificate.secretName }}
+  secretName: {{ .Chart.Name }}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}-tls
   issuerRef:
-    name: {{ .Values.certificate.issuerName }}
-    kind: {{ .Values.certificate.issuerKind }}
-  commonName: {{ .Values.certificate.commonName }}
+    name: {{ .Chart.Name }}-{{.Release.Namespace}}
+    kind: ClusterIssuer
+  commonName: {{ .Chart.Name }}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}
   dnsNames:
-    - {{ .Values.certificate.dnsNames }}
+    - {{ .Chart.Name }}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}
