--- a/charts/forms-flow-ssl/forms-flow-analytics/templates/issuer.yaml
+++ b/charts/forms-flow-ssl/forms-flow-analytics/templates/issuer.yaml
@@ -1,8 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: {{ .Values.issuer.name }}
-  namespace: {{ .Values.issuer.namespace }}
+  name: "{{ .Chart.Name }}-{{.Release.Namespace}}"
 spec:
   acme:
     # The ACME server URL
@@ -11,7 +10,7 @@ spec:
     email: {{ .Values.issuer.acmeEmail }}
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
-      name: {{ .Values.issuer.privateKeySecretName }}
+      name: "{{ .Chart.Name }}-{{.Release.Namespace}}"
     # Enable the HTTP-01 challenge provider
     solvers:
     - http01:
