--- a/charts/forms-flow-ssl/forms-flow-forms/values.yaml
+++ b/charts/forms-flow-ssl/forms-flow-forms/values.yaml
@@ -1,23 +1,4 @@
-# Default values for forms-flow-forms 
-
-# Values for Cert
-
-certificate:
-  domainName: forms-flow-forms-multitenant.aot-technologies.com
-  namespace: multitenant
-  secretName: forms-flow-forms-multitenant.aot-technologies.com-tls
-  issuerName: letsencrypt-dev4
-  issuerKind: ClusterIssuer
-  commonName: forms-flow-forms-multitenant.aot-technologies.com
-  dnsNames: forms-flow-forms-multitenant.aot-technologies.com
-
-
-# Values for Issuer
-
+Domain: #<Domain_Name>
 issuer:
-  name: letsencrypt-dev4
-  namespace: default
   acmeEmail: ""
-  privateKeySecretName: letsencrypt-dev4
   ingressClass: nginx
-
