--- a/charts/forms-flow-ssl/forms-flow-web/templates/cert.yaml
+++ b/charts/forms-flow-ssl/forms-flow-web/templates/cert.yaml
@@ -1,13 +1,12 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: {{ .Values.certificate.domainName }}
-  namespace: {{ .Values.certificate.namespace }}
+  name: {{ .Chart.Name }}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}
 spec:
-  secretName: {{ .Values.certificate.name }}-tls
+  secretName: {{ .Chart.Name }}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}-tls
   issuerRef:
-    name: {{ .Values.issuer.name }}
+    name: {{ .Chart.Name }}-{{.Release.Namespace}}
     kind: ClusterIssuer
-  commonName: {{ .Values.certificate.name }}
+  commonName: {{ .Chart.Name }}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}
   dnsNames:
-    - {{ .Values.certificate.name }}
+    - {{ .Chart.Name }}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}
