updated secret and deployment

--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -19,10 +19,6 @@ ingress:
   selfSigned: false
   extraTls:
     - {}  
-#    - secretName: "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}-tls"
-#      hosts:
-#        - "{{.Chart.Name}}-{{.Release.Namespace}}.{{tpl .Values.Domain .}}"
-
 redis-exporter:
   exporter:
     image:  
@@ -49,6 +45,7 @@ redash:
     registry: docker.io #registry to use
     repository: formsflow/redash # repoisitory for redash image  
     tag: 10.1.4 # tag of image being used
+    secret: ""
   database:
     password: postgres # admin password
     url: "postgresql://postgres:postgres@forms-flow-analytics-postgresql:5432/postgres" # redash database url - i.e forms-flow-analytics-postgresql
