--- a/charts/forms-flow-bpm/templates/deployment.yaml
+++ b/charts/forms-flow-bpm/templates/deployment.yaml
@@ -198,6 +198,8 @@ spec:
         - mountPath: /app/mail-config.properties
           name: "{{ .Chart.Name }}-mail-config"
           subPath: mail-config.properties
+      imagePullSecrets:
+      - name: "{{ .Values.image.secret }}"
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
