updated values with docker cred

--- a/charts/forms-flow-ai/templates/secret.yaml
+++ b/charts/forms-flow-ai/templates/secret.yaml
@@ -15,3 +15,13 @@ stringData:
   ADMIN_WEB_CLIENTID: {{ index .Values "forms-flow-web" "clientid"}}
   INSIGHT_API_KEY:  "{{.Values.insight_api_key}}"
   REDIS_PASSCODE: "{{.Values.redis_pass_code}}"
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  labels:
+    app: {{ .Chart.Name }}-auth
+  name: {{ .Chart.Name }}-auth
+type: kubernetes.io/dockerconfigjson
+data:
+  .dockerconfigjson: {{ index .Values "forms-flow-auth" "imagesecret" }}
