--- a/charts/forms-flow-api/templates/deployment.yaml
+++ b/charts/forms-flow-api/templates/deployment.yaml
@@ -175,4 +175,4 @@ spec:
         tty: true
       restartPolicy: Always
       imagePullSecrets:
-      - name: "{{ .Values.image.secret }}"
+      - name: "{{ .Values.formsflow.auth }}"
