--- a/charts/forms-flow-api/values.yaml
+++ b/charts/forms-flow-api/values.yaml
@@ -12,7 +12,8 @@ resources:
 formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
   secret: forms-flow-ai #name of formsflow.ai secret
-  analytics: forms-flow-analytics #name of forms-flow-analytics component 
+  analytics: forms-flow-analytics #name of forms-flow-analytics component
+  auth: forms-flow-ai-auth 
 ingress:
   ingressClassName: ""
   annotations:
@@ -28,4 +29,4 @@ image:
   registry: docker.io
   repository: formsflow/forms-flow-webapi
   tag: v5.1.0 #The image tag to pull from
-  secret: ""
+  
