--- a/charts/forms-flow-bpm/values.yaml
+++ b/charts/forms-flow-bpm/values.yaml
@@ -34,12 +34,10 @@ image:
   registry: docker.io
   repository: formsflow/forms-flow-bpm
   tag: v5.1.0 #The image tag to pull from
-  secret: ""
-
 formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
   secret: forms-flow-ai #name of formsflow.ai secret 
-
+  auth: forms-flow-ai-auth
 ingress:
   ingressClassName: ""
   annotations:
