--- a/charts/forms-flow-documents-api/values.yaml
+++ b/charts/forms-flow-documents-api/values.yaml
@@ -11,6 +11,7 @@ resources:
 formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
   secret: forms-flow-ai #name of formsflow.ai secret
+  auth: forms-flow-ai-auth
 ingress:
   ingressClassName: ""
   annotations:
@@ -26,4 +27,3 @@ image:
   registry: docker.io
   repository: formsflow/forms-flow-documents-api
   tag: v5.1.0 #The image tag to pull from
-  secret: ""
