--- a/charts/forms-flow-forms/values.yaml
+++ b/charts/forms-flow-forms/values.yaml
@@ -5,6 +5,7 @@ admin:
 formsflow:
   configmap: forms-flow-ai #integration env vars
   secret: forms-flow-ai # integration env vars secret
+  auth: forms-flow-ai-auth
 image:
   registry: docker.io
   repository: formsflow/forms-flow-forms
